<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="historial">Historial</string>
    <string name="contactos">Contactos</string>
    <string name="menu_general">Opciones generales</string>
    <string name="opciones_usuario">Opciones usuario</string>
    <string name="opciones_servidor">Opciones servidor</string>
    
    <string name="menu_general_user_id">Id usuario</string>
    <string name="menu_general_server_ip">IP servidor</string>
    <string name="menu_general_server_port">Puerto</string>
    
    <string-array name="valores">
        <item>1</item>
        <item>2</item>
    </string-array>
    
    <string-array name="opciones">
        <item>opcion 1</item>
        <item>opcion 2</item>
    </string-array>
    

</resources>