<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/opciones_usuario">
        <EditTextPreference 
            android:key="user_id"
            android:title="@string/menu_general_user_id"
            android:summary="@string/menu_general_user_id"
            android:dialogTitle="@string/menu_general_user_id"/>
        
    </PreferenceCategory>
        
 	<PreferenceCategory android:title="@string/opciones_servidor">        
        
        <EditTextPreference 
            android:key="server_ip"
            android:title="@string/menu_general_server_ip"
            android:summary="@string/menu_general_server_ip"
            android:dialogTitle="@string/menu_general_server_ip"/>
        
        <EditTextPreference 
            android:key="server_port"
            android:title="@string/menu_general_server_port"
            android:summary="@string/menu_general_server_port"
            android:dialogTitle="@string/menu_general_server_port"/>
        
    </PreferenceCategory>
    

</PreferenceScreen>